--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <div class="topo"> <!-- Topo da página -->
         <img src="arquivos-do-projeto\logo.ico">
         <div>
-          <a href="#informacoes">INFORMAÇÕES</a>
-          <a href="#contatos">CONTATOS</a>
-          <a href="#horarios">HORÁRIOS</a>
+            <a href="#informacoes">INFORMAÇÕES</a>
+            <a href="#contatos">CONTATOS</a>
+            <a href="#horarios">HORÁRIOS</a>
         </div>
-      </div>
-      
+    </div>
+
 
     <!--Fim do Header FIXO-->
 
     <!--Secao-Informacoes-->
     <div id="banner" class="container-parallax1">
         <div>
-            <h1>MANHATTAN - COFFE HOUSE</h1>
+            <h1>MANHATTAN - COFFEE HOUSE</h1>
         </div>
     </div>
 
@@ -64,9 +64,11 @@
             da torra, você poderá experimentar diferentes e deliciosos tipos de
             café.
         </p>
-        <div class="container-parallax3">
-            <h3>A vida só começa depois do café!</h3>
-        </div>
+
+    </div>
+    <!--Eu havia alterado essa seção pra um local que não era adequado.-->
+    <div class="container-parallax3">
+        <h3>A vida só começa depois do café!</h3>
     </div>
 
     <div class="container-texto">
@@ -83,7 +85,7 @@
         </p>
     </div>
 
-    <div id="contato" class="container-parallax4">
+    <div id="contatos" class="container-parallax4">
 
         <h2>Contatos & Endereço</h2>
         <iframe
@@ -113,7 +115,7 @@
                     <p>09:00 - 22:00</p>
                 </li>
                 <li>
-                    <h3>QUARTA/h3>
+                    <h3>QUARTA</h3>
                         <div></div>
                         <p>09:00 - 22:00</p>
                 </li>
@@ -133,7 +135,7 @@
                     <p>12:00 - 22:00</p>
                 </li>
                 <li>
-                    <h3>DOMINGO/h3>
+                    <h3>DOMINGO</h3>
                         <div></div>
                         <p>12:00 - 22:00</p>
                 </li>
@@ -143,7 +145,7 @@
 
     <div class="container-rodape"> <!-- Rodapé da página -->
         <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
-        <p>Desenvolvido por <span>"nome do aluno"</span></p>
+        <p>Desenvolvido por <span>"Victor Medeiros"</span></p>
         <a href="#banner"></a>
     </div>
 
